<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.placego.fragments.MainRegister">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/register_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/register_edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890_-"
            android:ems="10"
            android:hint="@string/register_user"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/register_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ_-"
            android:ems="10"
            android:hint="@string/login_pass"
            android:imeOptions="actionSend|flagNoExtractUi"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <com.placego.ui.widget.PaperButton
        android:id="@+id/register_enter"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        widget:paper_color="@color/colorPrimary"
        widget:paper_text="@string/register"
        widget:paper_text_color="@android:color/white" />


</LinearLayout>
