<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.placego.fragments.MainLogin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/login_text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_email_o_user"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/login_text_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ_-"
            android:ems="10"
            android:hint="@string/login_pass"
            android:imeOptions="actionSend|flagNoExtractUi"
            android:inputType="textPassword|textNoSuggestions"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <com.placego.ui.widget.PaperButton
        android:id="@+id/login_enter"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        widget:paper_color="@color/colorPrimary"
        widget:paper_text="@string/login"
        widget:paper_text_color="@android:color/white" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>
